# avgcalc

./: .gitignore  Makefile.am  Makefile.in  README.md  avgcalc.spec  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  NEWS  README
m4/: ChangeLog
man/: Makefile.am  Makefile.in  avgcalc.1
po/: .mo  ChangeLog  Makefile.am  Makefile.am.bak  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  README  apa.pot  avgcalc.mo  avgcalc.pot  pl.mo  pl.po  sv_SE.mo  sv_SE.po
src/: Makefile.am  Makefile.in  getline.c  init.c  main.c  main.h  mode.c  nls.c  nls.h  output.c  parse_args.c  sort.c
